@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7551 2004/10/25 08:08:53 xtraeme Exp $
+$NetBSD: CHANGES,v 1.7552 2004/10/25 08:35:09 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4847,3 +4847,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated libungif to 4.1.3nb2 [tron 2004-10-25]
 	Updated openmsx to 0.5.0 [xtraeme 2004-10-25]
 	Updated clamsmtp to 1.0 [xtraeme 2004-10-25]
+	Updated libxslt to 1.1.11 [xtraeme 2004-10-25] 
